tests/should_fail/data_fromjson_garbage.nv
module main

// SHOULD FAIL: fromJson with garbage / non-JSON string
let x = Data::fromJson@[Int]("this is not json at all {{{")
